<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#4068CD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
        app:titleTextColor="#000000"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:labelFor="@+id/viewNombre" />

    <TextView
        android:id="@+id/viewTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_telefono" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:labelFor="@+id/viewTelefono" />

    <TextView
        android:id="@+id/viewCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_correo_electronico" />

    <EditText
        android:id="@+id/txtCorreoELectronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:labelFor="@+id/viewCorreo" />

    <Button
        android:id="@+id/btnGuarda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guarda" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_edit" />

</LinearLayout>